//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table mangas {
  id Int [pk, increment]
  title String [not null]
  alternative String
  description String [not null]
  status Int [not null, default: 1]
  image String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  isAdult Boolean [not null, default: false]
  isNoindex Boolean [not null, default: false]
  isPublic Boolean [not null, default: false]
  bookmarks bookmarks [not null]
  chapters chapters [not null]
  views manga_views
  genres genres [not null]
  tags tags [not null]
}

Table chapters {
  id Int [pk, increment]
  title String [not null]
  mangaId Int [not null]
  content Json [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  index Float [not null, default: 0]
  isPublic Boolean [not null, default: false]
  manga mangas [not null]
}

Table manga_views {
  id Int [pk, increment]
  views Int [not null, default: 0]
  viewsDay Int [not null, default: 0]
  viewsWeek Int [not null, default: 0]
  mangaId Int [unique, not null]
  viewsMonth Int [not null, default: 0]
  manga mangas [not null]
}

Table genres {
  id Int [pk, increment]
  name String [unique, not null]
  pinned Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  content String
  manga mangas [not null]
}

Table tags {
  id Int [pk, increment]
  name String [unique, not null]
  content String
  manga mangas [not null]
}

Table users {
  id Int [pk, increment]
  email String [unique]
  fullname String [not null]
  password String [not null]
  role String [not null, default: 'user']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  username String [unique, not null]
  Session sessions
}

Table sessions {
  id Int [pk, increment]
  uuidHash String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  userId Int [unique]
  bookmarks bookmarks [not null]
  user users
}

Table bookmarks {
  id Int [pk, increment]
  mangaId Int [not null]
  sessionId Int [not null]
  manga mangas [not null]
  session sessions [not null]

  indexes {
    (sessionId, mangaId) [unique]
  }
}

Table GenreToManga {
  genresId Int [ref: > genres.id]
  mangaId Int [ref: > mangas.id]
}

Table MangaToTag {
  tagsId Int [ref: > tags.id]
  mangaId Int [ref: > mangas.id]
}

Ref: chapters.mangaId > mangas.id [delete: Cascade]

Ref: manga_views.mangaId - mangas.id [delete: Cascade]

Ref: sessions.userId - users.id [delete: Cascade]

Ref: bookmarks.mangaId > mangas.id [delete: Cascade]

Ref: bookmarks.sessionId > sessions.id [delete: Cascade]